@@ -3,7 +3,6 @@ package org.riptide.repository.elastic.bulk;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import io.searchbox.core.BulkResult;
 import org.riptide.repository.elastic.BulkResultWrapper;
@@ -33,12 +32,12 @@ public class DefaultBulkResult<T> implements BulkResultWrapper<T> {
     public List<FailedItem<T>> getFailedItems() {
         int j = 0;
         final List<FailedItem<T>> failedItems = new ArrayList<>();
-        for (int i = 0; i< rawResult.getItems().size(); i++) {
+        for (int i = 0; i < rawResult.getItems().size(); i++) {
             final BulkResult.BulkResultItem bulkResultItem = rawResult.getItems().get(i);
             if (bulkResultItem.error != null && !bulkResultItem.error.isEmpty()) {
                 final Exception cause = BulkUtils.convertToException(bulkResultItem.error);
                 final T failedObject = documents.get(j);
-                final FailedItem failedItem = new FailedItem(j, failedObject, cause);
+                final FailedItem<T> failedItem = new FailedItem<>(j, failedObject, cause);
                 failedItems.add(failedItem);
                 j++;
             }
@@ -53,6 +52,6 @@ public class DefaultBulkResult<T> implements BulkResultWrapper<T> {
 
     @Override
     public List<T> getFailedDocuments() {
-        return getFailedItems().stream().map(item -> item.getItem()).collect(Collectors.toList());
+        return getFailedItems().stream().map(FailedItem::getItem).toList();
     }
 }
